--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://anarchobooleanism.github.io/masked-singer"
+  "homepage": "http://anarchobooleanism.github.io/masked-singer/"
 }
